2005-07-11  Lillian Angel  <langel@redhat.com>
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	Changed the default row height for the tree.

2005-07-11  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/examples/swing/Demo.java
	(mkDesktopWorld): Made InternalFrames visible.

2005-07-11  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JFileChooser.java (getSelectedFiles): Return an one
	element array containing selectedFile if selectedFiles is null.

2005-07-11  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(getPreviousVisibleNode): Implemented
	(selectPath): helper method, implemented.
	(keyPressed): handles up/down/left/right keys
	(mouseClicked): made more efficent and implemented double 
	clicking for folders.
	* javax/swing/JTree.java
	(clearSelection): Lead selection path is set to null when 
	nothing is currently selected.

2005-07-11  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicMenuUI.java:
	(MouseHandler.popupVisible): new method.
	(MouseHandler.mouseEntered): Removed check for menu being armed to
	comply with reference implementation.  Calls popupVisible to check
	for menus with their popup menu visible.

2005-07-11  Mark Wielaard  <mark@klomp.org>

	* java/net/DatagramSocket.java (getImpl): Record cause of Exception.

2005-07-11  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-net/gnu_java_net_PlainDatagramSocketImpl.c:
	Whenever an ExceptionOccurred just return to throw it, don't mask.
	* native/jni/java-net/javanet.c (_javanet_get_netaddr): Check for
	NULL addr.
	(_javanet_create): Explicitly close socket on failure.
	(_javanet_close): Save error message and retry closing when
	interrupted before throwing exception.
	(_javanet_connect): Keep retrying connect after system call
	interrupted. First construct exception before cleanup.
	(_javanet_bind): Save error string for exception.
	(_javanet_accept): Explicitly close socket on failure.