@@ -838,6 +838,12 @@ public class Demo
     child2.add(child24);
 
     JTree tree = new JTree(root);
+    tree.setRootVisible(true);
+    tree.setLargeModel(true);
+    DefaultTreeSelectionModel dtsm = new DefaultTreeSelectionModel();
+    dtsm.setSelectionMode(DefaultTreeSelectionModel.SINGLE_TREE_SELECTION);
+    tree.setSelectionModel(dtsm);
+    
     return tree;
   }
 
